# hireflow

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
hireflow/: manage.py
hireflow/accounts/: admin.py  models.py  serializers.py  views.py
hireflow/accounts/migrations/: 0001_initial.py
hireflow/analytics/: models.py  urls.py  views.py
hireflow/candidates/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
hireflow/candidates/migrations/: 0001_initial.py  0002_candidate_company.py  0003_candidate_metadata.py
hireflow/hireflow/: celery.py  settings.py  urls.py  wsgi.py
hireflow/interviews/: admin.py  models.py  serializers.py  views.py
hireflow/interviews/migrations/: 0001_initial.py
hireflow/jobs/: admin.py  models.py  serializers.py  urls.py  views.py
hireflow/jobs/migrations/: 0001_initial.py  0002_job_company.py
hireflow/notifications/: background_tasks.py  tasks.py
hireflow/pipeline/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
hireflow/pipeline/migrations/: 0001_initial.py
hireflow/tenants/: middleware.py  models.py
hireflow/tenants/migrations/: 0001_initial.py
hireflow/tests/: conftest.py  factories.py  test_candidates.py  test_models.py  test_pipeline.py
